package com.primefuel.fulltank.platform.notification.domain.model.commands;

public record MarkNotificationAsReadCommand(Long notificationId) {
}

