package com.primefuel.fulltank.platform.notification.domain.model.queries;

public record GetNotificationByIdQuery(Long notificationId) {
}
