package com.primefuel.fulltank.platform.notification.domain.model.queries;

public record GetNotificationsByUserIdQuery(Long userId) {
}
