package com.primefuel.fulltank.platform.notification.interfaces.rest;

public class NotificationController {
}
